--- a/link-three/src/app/globals.css
+++ b/link-three/src/app/globals.css
@@ -11,6 +11,17 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-
 }
 
+html, body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+
+footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+}
