--- a/link-three/src/app/page.module.css
+++ b/link-three/src/app/page.module.css
@@ -7,7 +7,8 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 100%;
+    flex: 1;
 
+    width: 100%;
     height: 100vh;
 }
